--- a/src/sensor_monitor/config.yaml
+++ b/src/sensor_monitor/config.yaml
@@ -1,6 +1,6 @@
 # src/sensor_monitor/config.yaml
 
-language: ja  # 使用する言語 ('ja' または 'en')
+language: en  # 使用する言語 ('ja' または 'en')
 
 sensor_interval: 5  # 全センサー共通の取得頻度（秒）
 
